<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context="com.juliocgutierrez.barranca.SitiosActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:textSize="18dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textAlignment="center"
            android:text="@string/museo"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/museo">

        </ImageView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:textSize="18dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/museoinfo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:textSize="18dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textAlignment="center"
            android:text="@string/marcela"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/marcela">

        </ImageView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:textSize="18dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/marcelainfo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:textSize="18dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textAlignment="center"
            android:text="@string/cienaga"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/cienega">

        </ImageView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:textSize="18dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/cienagainfo" />

    </LinearLayout>

</ScrollView>
